--- a/cv_website.html
+++ b/cv_website.html
@@ -208,7 +208,7 @@
                     <br>
                     <h2 > <a style="color:#1C2340" href="https://stmarkscs.ie/" target="_blank">Leaving Certificate (2017)</a></h2>
                     <br>
-                    <a href="https://stmarkscs.ie/" target="_blank"><img src="images/stmarks.jpg" alt="TUD Logo" width="400" height="250"></a>
+                    <a class="stmarks" href="https://stmarkscs.ie/" target="_blank"><img src="images/stmarks.jpg" alt="TUD Logo" width="400" height="250"></a>
                     <br><br><br>
                       <button style="background-color:#1C2340" type="button" class="btn btn-primary" data-toggle="collapse" data-target="#lcresult">Leaving Cert Result</button>
                       <div id="lcresult" class="collapse">
@@ -219,7 +219,9 @@
             <br><br>
                     <h2><a style="color:#1C2340" href="https://www.tudublin.ie/" target="_blank"> TU Dublin Tallaght (2017-Present)</a></h2>
                     <br>
+                    <div class="stmarksimg">
                     <a href="https://www.tudublin.ie/" target="_blank"><img src="images/dit.png" alt="TUD Logo" width="400" height="250" ></a>
+                    </div>
                     <br><br><br>
                     <ul class="nav nav-tabs">
                         <li class= first><button id="first" style="background-color:#1C2340" type="button" class="btn btn-primary" data-toggle="pill" href="#FirstYear">First Year Results</button></li>
